--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: var(--font-body);
-  background-color: #000000;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #000000;
 }
 
 h1,
